# sf-inter-plugin-msgs

./: LICENSE  README.md
examples/SASL/data/modules/: main.lua
examples/SASL/data/modules/Custom Module/helpers/: SharedFlightMessageDefinitions.lua
examples/SASL/data/modules/configuration/: configuration.ini
examples/c-sample-plugin/: .gitignore  CMakeLists.txt  XCompile.txt  example_plugin.cpp
examples/c-sample-plugin/build-win32/: CMakeCache.txt  Makefile  cmake_install.cmake
includes/: SharedFlightMessaging.h
